Buttons & form fixes. Added DatePicker.

--- a/content/css/bootmetro-tiles.css
+++ b/content/css/bootmetro-tiles.css
@@ -54,7 +54,7 @@
 
    .metro-sections h2 {
       margin-left: 5px;
-      font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
+      font-family: "Open Sans",Helvetica,"Helvetica Neue",Sans-Serif;
       font-weight: 300;
       text-transform: lowercase;
    }
