--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -63,5 +63,16 @@
 @import "../utilities.less"; // Has to be last to override when necessary
 
 // BootMetro specs
-@import "tiles.less";
+@import "scaffolding.less";
+@import "forms.less";
+@import "dropdowns.less";
 @import "type.less";
+@import "buttons.less";
+@import "button-groups.less";
+@import "navs.less";
+@import "navbar.less";
+@import "modals-popovers.less";
+
+@import "progress-bars.less";
+
+@import "tiles.less";
