--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -5,7 +5,7 @@
    background-color: @purple !important;
 }
 .bg-color-greenDark {
-   background-color: darken(@green, 15%) !important;
+   background-color: @greenDark !important;
 }
 .bg-color-blue {
    background-color: @blue !important;
@@ -24,38 +24,6 @@
 }
 .bg-color-pink {
    background-color: @pink !important;
-}
-.bg-color-darken {
-   background-color: #1c1c1c !important;
-}
-
-
-.bg-color-orange {
-   background-color: #CD4900 !important;
-}
-.bg-color-purple {
-   background-color: #603cba !important;
-}
-.bg-color-greenDark {
-   background-color: #008641 !important;
-}
-.bg-color-blue {
-   background-color: #0072BC !important;
-}
-.bg-color-red {
-   background-color: #bc1c48 !important;
-}
-.bg-color-green {
-   background-color: #01a31c !important;
-}
-.bg-color-blueDark {
-   background-color: #662D91 !important;
-}
-.bg-color-yellow {
-   background-color: #ffc40d !important;
-}
-.bg-color-pink {
-   background-color: #c3325f !important;
 }
 .bg-color-darken {
    background-color: #1c1c1c !important;
@@ -88,7 +56,7 @@
 .metro-sections {
    h2 {
       margin-left: 5px;
-      font-family: "Open Sans",Helvetica,"Helvetica Neue",Sans-Serif;
+//      font-family: "Open Sans",Helvetica,"Helvetica Neue",Sans-Serif;
       font-weight: 300;
       text-transform: lowercase;
    }
