--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -5,9 +5,9 @@
 
 // Global values
 // --------------------------------------------------
-
 @green1:	#009800;
 @green2:	#008a00;
+@greenDark: #008641;
 @blu1:	#003484;
 @darkblu: #1f3445;
 @lilla:	#43205a;
@@ -43,6 +43,7 @@
 @lime:                  #8CBF26;
 @magenta:               #FF0097;
 @teal:                  #00ABA9;
+
 
 // Scaffolding
 // -------------------------
@@ -166,8 +167,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "assets/img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "assets/img/glyphicons-halflings-white.png";
+@iconSpritePath:          "content/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "content/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
