--- a/less/bootmetro/type.less
+++ b/less/bootmetro/type.less
@@ -7,37 +7,34 @@
 
 h1 {
    font-weight: 300;
-   font-size: 42pt;
-   line-height: 1.1429; /* 64px when font-size is 42pt */
+   font-size: 40px;
+   line-height: 48px;
 }
 h2 {
    font-weight: 300;
-   font-size: 20pt;
-   line-height: 1.2; /* 32px when font-size is 20pt */
+   font-size: 26px;
+   line-height: 34px;
 }
 h3 {
    font-weight: 600;
-   font-size: 11pt;
-   line-height: 1.3636; /* 20px when font-size is 11pt */
+   font-size: 20px;
+   line-height: 26px;
 }
-h4 {
+h4 /*, code, pre, samp*/ {
    font-weight: 400;
-   font-size: 11pt;
-   line-height: 1.3636; /* 20px when font-size is 11pt */
+   font-size: 15px;
+   line-height: 20px;
 }
-h5 {
+body, h5, legend {
    font-weight: 300;
-   font-size: 11pt;
-   line-height: 1.3636; /* 20px when font-size is 11pt */
+   font-size: 13px;
+   line-height: 20px;
 }
 h6, caption, figcaption, small {
    font-weight: 400;
    font-size: 11px;
    line-height: 11px;
-   font-size: 9pt;
-   line-height: 1.6667; /* 20px when font-size is 9pt */
 }
-
 h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    margin-bottom: 0;
@@ -45,7 +42,6 @@ h1, h2, h3, h4, h5, h6 {
 
 
 // This is the header H2 with a dropdown for the page menu
-// -------------------------
 #header-container a.header-dropdown {
    font-size: 26px;
    font-weight: 200;
@@ -61,17 +57,36 @@ h1, h2, h3, h4, h5, h6 {
 }
 #header-container h5 {font-size: 14px;}
 
+dt, th {
+   font-size: 15px;
+   font-weight: 700;
+   line-height: 1.3636; /* 20px when font-size is 11pt */
+}
+
+abbr, acronym, address, blockquote, cite, dl, dd, li, ol, p, q, td, tr {
+   font-weight: 300;
+}
+
+b, strong {
+   font-weight: 700;
+}
+
+em {
+   font-style: italic;
+}
+
+p {
+//   font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
+   font-weight: 300;
+}
 
 
 /* Additional letter-spacing for the document and its controls.
 -------------------------------------------------- */
 
 body,
-button,
-input,
-textarea,
-select,
-option {
+button, input,
+textarea, .win-textarea,
+select, option {
    letter-spacing: 0.02em;
 }
-
