--- a/templates/pages/javascript.mustache
+++ b/templates/pages/javascript.mustache
@@ -217,9 +217,9 @@ $('#myModal').on('show', function (e) {
              </div>
           </div>
           <div class="bs-docs-example" style="padding-bottom: 24px;">
-             <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">{{_i}}Show Flyout (classic modal){{/i}}</a>
-             <a data-toggle="modal" href="#myModal2" class="btn btn-success btn-large">{{_i}}Show Metro Message{{/i}}</a>
-             <a data-toggle="modal" href="#myModal3" class="btn btn-warning btn-large">{{_i}}Show Error/Warning{{/i}}</a>
+             <a data-toggle="modal" href="#myModal" class="btn btn-primary">{{_i}}Show Flyout (classic modal){{/i}}</a>
+             <a data-toggle="modal" href="#myModal2" class="btn btn-success">{{_i}}Show Metro Message{{/i}}</a>
+             <a data-toggle="modal" href="#myModal3" class="btn btn-warning">{{_i}}Show Error/Warning{{/i}}</a>
           </div>{{! /example }}
 
 <pre class="prettyprint linenums">
