--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -65,14 +65,22 @@
 // BootMetro specs
 @import "scaffolding.less";
 @import "forms.less";
+@import "metro-radio-checkboxes.less";
+@import "tables.less";
 @import "dropdowns.less";
 @import "type.less";
 @import "buttons.less";
 @import "button-groups.less";
+@import "alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 @import "navs.less";
 @import "navbar.less";
+@import "pagination.less";
 @import "modals-popovers.less";
+@import "filter-dropdowns.less";
 
 @import "progress-bars.less";
+@import "carousel.less";
 
 @import "tiles.less";
+@import "charms.less";
+@import "wizard.less";
