--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -1,15 +1,23 @@
 //
 // Forms
 // --------------------------------------------------
+.form-actions {
+   background-color: inherit;
+}
+
+
+.label {
+   .no-border-radius;
+   text-shadow: none;
+}
+
 
 a.win-command,
 input, button, select, textarea {
    font-family: @sansFontFamily;
    font-weight: 300;
    line-height: 30px;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
+   .box-sizing(border-box);
 }
 
 textarea {
