--- a/less/bootmetro/modals-popovers.less
+++ b/less/bootmetro/modals-popovers.less
@@ -4,12 +4,24 @@
 .modal {
    border: 0;
    .no-box-shadow;
+   .no-border-radius;
 }
 .modal.warning.fade.in {
    top: 0;
 }
 .modal.message.fade.in {
    top: 20%;
+}
+.modal-header {
+   border: 0;
+}
+.modal.message,.modal.warning {
+   left: 0;
+   margin: 0;
+   padding: 0 20%;
+   width: 60%;
+   border: 0;
+   .no-box-shadow;
 }
 .modal.warning {
    padding: 0 1%;
@@ -28,17 +40,7 @@
       vertical-align: top;
    }
 }
-.modal-header {
-   border: 0;
-}
-.modal.message,.modal.warning {
-   left: 0;
-   margin: 0;
-   padding: 0 20%;
-   width: 60%;
-   border: 0;
-   .no-box-shadow;
-}
+
 .modal-body {
    max-height: 300px;
 }
