--- a/less/bootmetro/scaffolding.less
+++ b/less/bootmetro/scaffolding.less
@@ -24,3 +24,80 @@ No border on images when in a link.
 img {
    border-style: none;
 }
+
+
+#top-info {
+   display: block;
+   a {
+      display: inline-block;
+      height: 46px;
+      color: #5A5A5A;
+   }
+   b {
+      display: inline-block;
+      font-size: 38px;
+      height: 46px;
+      line-height: 46px;
+      vertical-align: top;
+      width: 46px;
+      text-align: center;
+   }
+   hr.separator {
+      background-color: #7B7B7B;
+      border: 0 none;
+      display: inline-block;
+      height: 42px;
+      margin: 2px 10px;
+      padding: 0;
+      vertical-align: top;
+      width: 1px;
+   }
+   a:hover {
+      color: #000;
+   }
+}
+
+.top-info-block {
+   display: block;
+   float: left;
+   margin-left: 8px;
+}
+
+#header-container {
+   display: inline-block;
+}
+
+header {
+   h1 {
+      display: inline;
+   }
+}
+
+#nav-bar {
+   display: block;
+   position: relative;
+   height: 64px;
+   margin-bottom: 20px;
+}
+
+
+// The Grid
+.container-fluid {
+   padding-left: 70px;
+   padding-right: 70px;
+}
+
+/*
+Responsive Media Queries
+*/
+@media (max-width: 480px) {
+
+   .container-fluid {
+      padding: 0;
+   }
+
+}
+
+.row-fluid .hide {
+   display: none;
+}
