--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -4,7 +4,9 @@
    <li><a href="./listviews.html">ListViews</a></li>
    <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
    <li><a href="./table.html">Demo Table</a></li>
+   <li><a href="./wizard.html">Demo Table</a></li>
    <li><a href="./icons.html">Icons</a></li>
+   <li class="divider"></li>
    <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
    <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
    <li><a href="./components.html">Bootstrap Components</a></li>
