--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -7402,7 +7402,6 @@ Progress control. */
   display: block;
   float: left;
   width: 180px;
-  padding-left: 10px;
 }
 
 .scroll {
@@ -7420,290 +7419,6 @@ Progress control. */
 
 .metro {
   overflow: hidden;
-}
-
-.metro .tile.square.text.tilesquareblock .text {
-  overflow: hidden;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: left;
-}
-
-.metro .tile.wide.imagetext {
-  width: 270px;
-  height: 110px;
-  padding: 20px;
-}
-
-.metro .tile.wide.imagetext .image-wrapper {
-  display: block;
-  float: left;
-  width: 80px;
-  height: 80px;
-}
-
-.metro .tile.wide.imagetext .image-wrapper img {
-  max-width: 80px;
-  max-height: 80px;
-}
-
-.metro .tile.wide.imagetext .textover-wrapper {
-  position: absolute;
-  bottom: 0;
-  width: 270px;
-  height: 48px;
-  padding: 2px 20px;
-  background-color: inherit;
-}
-
-.metro .tile.wide.image {
-  width: 310px;
-  height: 150px;
-}
-
-.metro .tile.wide.image .mini-tiles {
-  display: inline-block;
-  float: left;
-  width: 152px;
-  height: 150px;
-}
-
-.metro .tile.wide.image .mini-tiles img {
-  display: inline-block;
-  float: left;
-  max-width: 75px;
-  max-height: 75px;
-  border-left: 1px solid #2A2A2A;
-}
-
-.metro .tile.wide.text {
-  width: 270px;
-  height: 110px;
-  padding: 20px;
-}
-
-.metro .tile.wide.text .column-text-big {
-  display: block;
-  float: left;
-  width: 80px;
-}
-
-.metro .tile.squarepeek {
-  width: 150px;
-  height: 300px;
-}
-
-.metro .tile.squarepeek .text-inner {
-  width: 110px;
-  height: 110px;
-  padding: 20px;
-}
-
-.metro .tile.square.text {
-  width: 110px;
-  height: 110px;
-  padding: 20px;
-}
-
-.metro .tile.square.text .text-big {
-  overflow: hidden;
-  font-size: 76px;
-  line-height: 76px;
-  text-align: left;
-}
-
-.metro .carousel-control {
-  top: 20%;
-}
-
-.metro .tile.widepeek {
-  width: 310px;
-  height: 300px;
-}
-
-.metro .tile.ad.ad125 {
-  width: 125px;
-  height: 125px;
-  padding: 12px 13px 13px 12px;
-}
-
-.metro .tile.wide.app {
-  width: 310px;
-  height: 150px;
-}
-
-.metro .tile.wide.app .image-wrapper {
-  width: 310px;
-}
-
-.metro .tile {
-  position: relative;
-  display: block;
-  float: left;
-  width: 150px;
-  height: 150px;
-  padding: 0;
-  margin: 5px;
-  overflow: hidden;
-  color: #FFF;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: #2C83EF;
-}
-
-.metro .tile .text-header3 {
-  max-height: 110px;
-  overflow: hidden;
-  font-family: "Open Sans", Arial, Helvetica, Sans-Serif;
-  font-size: 34px;
-  font-weight: 300;
-  line-height: 36px;
-  text-align: left;
-}
-
-.metro .tile .app-count {
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.metro .tile .column3-text {
-  display: block;
-  float: left;
-  width: 200px;
-}
-
-.metro .tile .column3-label {
-  display: block;
-  float: left;
-  width: 50px;
-}
-
-.metro .tile .text-header {
-  max-height: 36px;
-  overflow: hidden;
-  font-family: "Open Sans", Arial, Helvetica, Sans-Serif;
-  font-size: 34px;
-  font-weight: 300;
-  line-height: 36px;
-  text-align: left;
-}
-
-.metro .tile .column2-text {
-  display: block;
-  float: left;
-  width: 160px;
-}
-
-.metro .tile .column2-label {
-  display: block;
-  float: left;
-  width: 90px;
-}
-
-.metro .tile .text2 {
-  max-height: 44px;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 20px;
-  text-align: left;
-}
-
-.metro .tile .text3 {
-  max-height: 56px;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 18px;
-  text-align: left;
-}
-
-.metro .tile .text4 {
-  max-height: 72px;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 18px;
-  text-align: left;
-}
-
-.metro .tile .column {
-  display: block;
-  float: left;
-  width: 130px;
-}
-
-.metro .tile .text5 {
-  max-height: 92px;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 18px;
-  text-align: left;
-}
-
-.metro .tile .app-label {
-  position: absolute;
-  bottom: 5px;
-  left: 20px;
-  font-size: 12px;
-}
-
-.metro .tile .text {
-  height: 18px;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 18px;
-  text-align: left;
-}
-
-.metro .tile.wide.imagetext.wideimage {
-  width: 310px;
-  height: 150px;
-  padding: 0;
-}
-
-.metro .tile.wide.ad.ad125 {
-  width: 180px;
-  height: 150px;
-  padding: 0 65px;
-}
-
-.metro .tile.app .image-wrapper {
-  display: block;
-  width: 150px;
-  height: 80px;
-  padding: 8px 0;
-  margin-top: 20px;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.metro .tile.app .image-wrapper img {
-  max-width: 80px;
-  max-height: 80px;
-  margin: 0 auto;
-}
-
-.metro .tile.wide.image.collection img {
-  float: left;
-  max-width: 158px;
-  max-height: 150px;
-}
-
-.metro .tile.square.image {
-  width: 150px;
-  height: 150px;
-  padding: 0;
-}
-
-.metro .tile.square.image img {
-  max-width: 150px;
-  max-height: 150px;
 }
 
 .metro .metro-sections {
@@ -7761,8 +7476,295 @@ Progress control. */
   margin-left: 0;
 }
 
+.metro .tile {
+  position: relative;
+  display: block;
+  float: left;
+  width: 150px;
+  height: 150px;
+  padding: 0;
+  margin: 5px;
+  overflow: hidden;
+  color: #FFF;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #2C83EF;
+}
+
+.metro .tile .app-count {
+  position: absolute;
+  right: 20px;
+  bottom: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.metro .tile .text-header3 {
+  max-height: 110px;
+  overflow: hidden;
+  font-size: 34px;
+  font-weight: 300;
+  line-height: 36px;
+  text-align: left;
+}
+
+.metro .tile .column3-text {
+  display: block;
+  float: left;
+  width: 200px;
+}
+
+.metro .tile .column3-label {
+  display: block;
+  float: left;
+  width: 50px;
+}
+
+.metro .tile .text-header {
+  max-height: 36px;
+  overflow: hidden;
+  font-size: 34px;
+  font-weight: 300;
+  line-height: 36px;
+  text-align: left;
+}
+
+.metro .tile .column2-text {
+  display: block;
+  float: left;
+  width: 160px;
+}
+
+.metro .tile .column2-label {
+  display: block;
+  float: left;
+  width: 90px;
+}
+
+.metro .tile .text2 {
+  max-height: 44px;
+  overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align: left;
+}
+
+.metro .tile .text3 {
+  max-height: 56px;
+  overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: left;
+}
+
+.metro .tile .text4 {
+  max-height: 72px;
+  overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: left;
+}
+
+.metro .tile .column {
+  display: block;
+  float: left;
+  width: 130px;
+}
+
+.metro .tile .text5 {
+  max-height: 92px;
+  overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: left;
+}
+
+.metro .tile .app-label {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  font-size: 12px;
+}
+
+.metro .tile .text {
+  height: 18px;
+  overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: left;
+}
+
 .metro .tile:hover {
   outline: 3px #225a68 solid;
+}
+
+.metro .tile.app .image-wrapper {
+  display: block;
+  width: 150px;
+  height: 80px;
+  padding: 8px 0;
+  margin-top: 20px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.metro .tile.app .image-wrapper img {
+  max-width: 80px;
+  max-height: 80px;
+  margin: 0 auto;
+}
+
+.metro .tile.square.text {
+  width: 110px;
+  height: 110px;
+  padding: 20px;
+}
+
+.metro .tile.square.text .text-big {
+  overflow: hidden;
+  font-size: 76px;
+  line-height: 76px;
+  text-align: left;
+}
+
+.metro .tile.square.text.tilesquareblock .text {
+  overflow: hidden;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.metro .tile.square.image {
+  width: 150px;
+  height: 150px;
+  padding: 0;
+}
+
+.metro .tile.square.image img {
+  max-width: 150px;
+  max-height: 150px;
+}
+
+.metro .tile.squarepeek {
+  width: 150px;
+  height: 300px;
+}
+
+.metro .tile.squarepeek .text-inner {
+  width: 110px;
+  height: 110px;
+  padding: 20px;
+}
+
+.metro .tile.wide.app {
+  width: 310px;
+  height: 150px;
+}
+
+.metro .tile.wide.app .image-wrapper {
+  width: 310px;
+}
+
+.metro .tile.wide.text {
+  width: 270px;
+  height: 110px;
+  padding: 20px;
+}
+
+.metro .tile.wide.text .column-text-big {
+  display: block;
+  float: left;
+  width: 80px;
+  margin-left: 10px;
+}
+
+.metro .tile.wide.text .column-text-big .text-big {
+  overflow: hidden;
+  font-size: 74px;
+  line-height: 60px;
+  text-align: right;
+}
+
+.metro .tile.wide.imagetext {
+  width: 270px;
+  height: 110px;
+  padding: 20px;
+}
+
+.metro .tile.wide.imagetext .image-wrapper {
+  display: block;
+  float: left;
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+
+.metro .tile.wide.imagetext .image-wrapper img {
+  max-width: 80px;
+  max-height: 80px;
+}
+
+.metro .tile.wide.imagetext .textover-wrapper {
+  position: absolute;
+  bottom: 0;
+  width: 270px;
+  height: 48px;
+  padding: 2px 20px;
+  background-color: inherit;
+}
+
+.metro .tile.wide.image {
+  width: 310px;
+  height: 150px;
+}
+
+.metro .tile.wide.image .mini-tiles {
+  display: inline-block;
+  float: left;
+  width: 152px;
+  height: 150px;
+}
+
+.metro .tile.wide.image .mini-tiles img {
+  display: inline-block;
+  float: left;
+  max-width: 75px;
+  max-height: 75px;
+  border-left: 1px solid #2A2A2A;
+}
+
+.metro .tile.wide.imagetext.wideimage {
+  width: 310px;
+  height: 150px;
+  padding: 0;
+}
+
+.metro .tile.wide.image.collection img {
+  float: left;
+  max-width: 158px;
+  max-height: 150px;
+}
+
+.metro .tile.widepeek {
+  width: 310px;
+  height: 300px;
+}
+
+.metro .tile.ad.ad125 {
+  width: 125px;
+  height: 125px;
+  padding: 12px 13px 13px 12px;
+}
+
+.metro .tile.wide.ad.ad125 {
+  width: 180px;
+  height: 150px;
+  padding: 0 65px;
 }
 
 .mediumListIconTextItem.selected .mediumListIconTextItem-Detail,
