--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -77,9 +77,11 @@
 @import "pagination.less";
 @import "modals-popovers.less";
 @import "filter-dropdowns.less";
+@import "labels-badges.less";
 
 @import "progress-bars.less";
 @import "carousel.less";
+@import "hero-unit.less";
 
 @import "tiles.less";
 @import "charms.less";
