--- a/less/bootmetro/pagination.less
+++ b/less/bootmetro/pagination.less
@@ -15,6 +15,13 @@
       }
    }
 }
+.pager li > a,
+.pager li > span {
+   .no-border-radius;
+}
+
+
+
 .pagination a:hover, .pagination .active a {
    background-color: #CCC;
 }
