--- a/templates/pages/components.mustache
+++ b/templates/pages/components.mustache
@@ -253,10 +253,9 @@
           <p>{{_i}}Make a set of buttons appear vertically stacked rather than horizontally.{{/i}}</p>
           <div class="bs-docs-example">
             <div class="btn-group btn-group-vertical">
-              <button type="button" class="btn"><i class="icon-align-left"></i></button>
-              <button type="button" class="btn"><i class="icon-align-center"></i></button>
-              <button type="button" class="btn"><i class="icon-align-right"></i></button>
-              <button type="button" class="btn"><i class="icon-align-justify"></i></button>
+              <button type="button" class="btn"><i class="icon-paragraph-left"></i></button>
+              <button type="button" class="btn"><i class="icon-paragraph-center"></i></button>
+              <button type="button" class="btn"><i class="icon-paragraph-right"></i></button>
             </div>
           </div>
 <pre class="prettyprint linenums">
