--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -23,13 +23,9 @@ input, button, select, textarea {
 textarea {
    width: 260px;
    height: auto;
-   padding: 4px 8px;
+   padding: 4px 4px 4px 8px;
    overflow-y: scroll;
    word-wrap: break-word;
-   // Leave space for autohiding scrollbar on elements that enable text selection.
-   padding-right: 17px;
-}
-textarea {
    min-width: 260px;
    min-height: 39px;
 }
@@ -89,4 +85,21 @@ input[type=range] {
    width: 280px;
    height: auto;
    padding: 17px 0 32px 0;
+}
+
+
+input.search-query {
+   .no-border-radius;
+}
+.form-search .input-append .search-query {
+   .no-border-radius;
+}
+.form-search .input-append .btn {
+   .no-border-radius;
+}
+.form-search .input-prepend .search-query {
+   .no-border-radius;
+}
+.form-search .input-prepend .btn {
+   .no-border-radius;
 }
