--- a/less/bootmetro/navs.less
+++ b/less/bootmetro/navs.less
@@ -6,3 +6,28 @@
    font-size: 14px;
    font-weight: 300;
 }
+
+
+.nav-pills > li > a,
+.nav-tabs > li > a {
+   .no-border-radius;
+}
+
+.nav-tabs.nav-stacked > li:first-child > a,
+.nav-tabs.nav-stacked > li:last-child > a {
+   .no-border-radius;
+}
+
+.nav-tabs .dropdown-menu,
+.nav-pills .dropdown-menu {
+   .no-border-radius;
+}
+
+.tabs-below > .nav-tabs > li > a {
+   .no-border-radius;
+}
+
+.tabs-left > .nav-tabs > li > a,
+.tabs-right > .nav-tabs > li > a {
+   .no-border-radius;
+}
