--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -1,29 +1,3 @@
-<!--
-<div id="hero" class="container-fluid" xmlns="http://www.w3.org/1999/html">
-   <div class="row-fluid">
-
-      <header class="jumbotron masthead">
-         <div class="inner span5">
-            <h1>BootMetro</h1>
-            <h2>Metro style web framework</h2>
-            <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 MetroUI" style, without the need to run on Windows 8.</p>
-            <p>
-               <a href="https://github.com/aozora/bootmetro/zipball/master" class="btn btn-large btn-primary btn-success">
-                  Download Now <small>it's free</small>
-                  <b class="icon-arrow-right-7"></b>
-               </a>
-               <br/>
-               <span class="label label-success">Latest version: 0.6</span>
-            </p>
-         </div>
-         <div class="span7">
-            <img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">
-         </div>
-      </header>
-
-   </div>
-</div>
--->
 <header id="hero" class="">
 
       <div class="jumbotron masthead">
@@ -38,7 +12,7 @@
                         Download Now
                         <i class="icon-arrow-right-7"></i>
                      </a>
-                     <span>it's free</span>
+                     <span class="muted">it's free</span>
                      <br/>
                      <span class="label label-success">Latest version: 0.6</span>
                   </p>
