--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -31,7 +31,7 @@ textarea {
 }
 
 input[type=text], input[type=password], input[type=email], input[type=number],
-input[type=tel], input[type=url], input[type=search], textarea, .win-textarea {
+input[type=tel], input[type=url], input[type=search], textarea {
    min-height: 28px;
    min-width: 64px;
    border-width: 2px;
