--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -15,6 +15,11 @@
                      <span class="muted">it's free</span>
                      <br/>
                      <span class="label label-success">Latest version: 0.6</span>
+                     &nbsp;
+                     <a class="link" href="https://github.com/aozora/bootmetro/wiki/Roadmap">
+                        roadmap
+                        <i class="icon-arrow-right-7"></i>
+                     </a>
                   </p>
                </div>
                <div class="span7">
@@ -129,5 +134,8 @@
 
 </div>
 
-
-
+<div class="marketing container-fluid">
+   <h1>Who's tweeting about Bootmetro ?</h1>
+   <a class="twitter-timeline" href="https://twitter.com/search?q=%23bootmetro" data-widget-id="265787903525916672">Tweets about "#bootmetro"</a>
+   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
