--- a/less/bootmetro/mixins.less
+++ b/less/bootmetro/mixins.less
@@ -28,6 +28,13 @@
            box-shadow: none;
 }
 
+
+.text-overflow-wrap {
+   overflow: hidden;
+   text-overflow: ellipsis;
+}
+
+
 // Gradient Bar Colors for buttons and alerts
    .gradientBar(@primaryColor, @secondaryColor, @textColor: #fff, @textShadow: 0 -1px 0 rgba(0,0,0,.25)) {
    color: @textColor;
