--- a/templates/pages/components.mustache
+++ b/templates/pages/components.mustache
@@ -2100,6 +2100,7 @@
           <div class="page-header">
             <h1>{{_i}}Progress bars{{/i}} <small>{{_i}}For loading, redirecting, or action status{{/i}}</small></h1>
           </div>
+           <p class="label label-info">For Metro style progress bars see the <a href="./metro-components.html">Metro Components</a> page.</p>
 
           <h2>{{_i}}Examples and markup{{/i}}</h2>
 
@@ -2113,32 +2114,6 @@
 <pre class="prettyprint linenums">
 &lt;div class="progress"&gt;
   &lt;div class="bar" style="width: 60%;"&gt;&lt;/div&gt;
-&lt;/div&gt;
-</pre>
-
-          <h3>{{_i}}Indeterminate{{/i}}</h3>
-          <p>{{_i}}Use this style for tasks that are not determinate that are non-modal (don't block user interaction).{{/i}}</p>
-          <div class="bs-docs-example">
-            <div class="progress progress-indeterminate">
-              <div class="bar"></div>
-            </div>
-          </div>
-<pre class="prettyprint linenums">
-&lt;div class="progress progress-indeterminate"&gt;
-  &lt;div class="bar"&gt;&lt;/div&gt;
-&lt;/div&gt;
-</pre>
-
-          <h3>{{_i}}Indeterminate Ring{{/i}}</h3>
-           <p>{{_i}}Use this style for tasks that are not determinate that are non-modal (don't block user interaction).{{/i}}</p>
-          <div class="bs-docs-example">
-            <div class="progress progress-indeterminate">
-              <div class="win-ring small"></div>
-            </div>
-          </div>
-<pre class="prettyprint linenums">
-&lt;div class="progress progress-indeterminate"&gt;
-  &lt;div class="win-ring small"&gt;&lt;/div&gt;
 &lt;/div&gt;
 </pre>
 
