--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -28,6 +28,16 @@
 
                <h2>BootMetro Demos</h2>
 
+               <a class="tile wide imagetext bg-color-orange" href="./metro-layouts.html">
+                  <div class="image-wrapper">
+                     <img src="content/img/metro-tiles.jpg" />
+                  </div>
+                  <div class="column-text">
+                     <div class="text4">Demos of various Metro style layouts.</div>
+                  </div>
+                  <div class="app-label">Layouts</div>
+               </a>
+
                <a class="tile wide imagetext bg-color-blueDark" href="./tiles-templates.html">
                   <div class="image-wrapper">
                      <img src="content/img/metro-tiles.jpg" />
@@ -66,18 +76,25 @@
                   <span class="app-label">[TODO] Charms</span>
                </a>
 
-               <a class="tile app bg-color-yellow" href="./images.html">
-                  <div class="image-wrapper">
-                     <span class="icon icon-images"></span>
-                  </div>
-                  <span class="app-label">[TODO] Images</span>
-               </a>
+               <!--<a class="tile app bg-color-yellow" href="./images.html">-->
+                  <!--<div class="image-wrapper">-->
+                     <!--<span class="icon icon-images"></span>-->
+                  <!--</div>-->
+                  <!--<span class="app-label">[_TODO] Images</span>-->
+               <!--</a>-->
 
                <a class="tile app bg-color-blueDark" href="./icons.html">
                   <div class="image-wrapper">
                      <span class="icon icon-IcoMoon" ></span>
                   </div>
                   <span class="app-label">Icons</span>
+               </a>
+
+               <a class="tile app bg-color-purple" href="./metro-components.html">
+                  <div class="image-wrapper">
+                     <span class="icon icon-list-2"></span>
+                  </div>
+                  <span class="app-label">Metro Components</span>
                </a>
 
             </div>
