--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -766,10 +766,11 @@ form.bs-docs-example {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
-   -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-   -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-   box-shadow: 0 1px 4px rgba(0,0,0,.065);
+   /*-webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);*/
+   /*-moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);*/
+   /*box-shadow: 0 1px 4px rgba(0,0,0,.065);*/
 }
+
 .bs-docs-sidenav > li > a {
    display: block;
    width: 190px \9;
