--- a/less/bootmetro/mixins.less
+++ b/less/bootmetro/mixins.less
@@ -78,13 +78,10 @@
 
 /* General alignment styles
 -------------------------------------------------- */
-.align-right {text-align: right}
-.align-left {text-align: left}
-.align-center {text-align: center}
+.align-right, th.align-right, td.align-right, .table th.align-right, .table td.align-right      {text-align: right}
+.align-left, th.align-left, td.align-left, .table th.align-left, .table td.align-left           {text-align: left}
+.align-center, th.align-center, td.align-center, .table th.align-center, .table td.align-center {text-align: center}
 
-td.align-right {text-align: right}
-td.align-left {text-align: left}
-td.align-center {text-align: center}
 
 .block { display: block;}
 
