Fixes on dark theme

--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -2,7 +2,7 @@
 ================================================== -->
 <header id="nav-bar" class="container-fluid">
    <div class="row-fluid">
-      <div class="span8">
+      <div class="span7">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./index.html"></a>
             <h5>{{appname}}</h5>
@@ -55,7 +55,7 @@
                   </div>
                </a>
 
-               <a class="tile app wide bg-color-greenDark" href="./table.html">
+               <a class="tile app square bg-color-greenDark" href="./table.html">
                   <div class="image-wrapper">
                      <img src="content/img/My Apps.png" alt=""/>
                   </div>
