--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -1,5 +1,9 @@
-<div id="top-info" class="pull-right">
-   <a href="#" class="pull-left">
+<div id="top-info" class="span5 pull-right">
+   <a id="settings" class="pull-right" href="#">
+      <b class="icon-settings"></b>
+   </a>
+   <hr class="separator pull-right"/>
+   <a href="#" class="pull-right">
       <div class="top-info-block">
          <h3>FirstName</h3>
          <h4>LastName</h4>
@@ -7,9 +11,5 @@
       <div class="top-info-block">
          <b class="icon-user"></b>
       </div>
-   </a>
-   <hr class="separator pull-left"/>
-   <a id="settings" class="pull-left" href="#">
-      <b class="icon-settings"></b>
    </a>
 </div>
