--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -76,6 +76,7 @@
 @import "navbar.less";
 @import "pagination.less";
 @import "modals-popovers.less";
+@import "tooltip.less";
 @import "filter-dropdowns.less";
 @import "labels-badges.less";
 
