--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -51,20 +51,34 @@
    .transition(left 0.6s ease);
 }
 
-.metro-sections {
-   h2 {
-      margin-left: 5px;
-      font-weight: 300;
-      text-transform: lowercase;
-   }
-}
+//.metro-sections {
+//   h2 {
+//      margin-left: 5px;
+//      font-weight: 300;
+//      text-transform: lowercase;
+//   }
+//}
+
 .metro {
    overflow: hidden;
+
    .metro-sections {
       height: auto;
       position: relative;
       overflow: hidden;
       width: 10000px;
+
+      &.vscroll {
+         width: auto;
+         overflow: inherit;
+      }
+
+      h2 {
+         margin-left: 5px;
+         font-weight: 300;
+         text-transform: lowercase;
+      }
+
       .metro-section.tile-span-8 {
          width: 1120px;
          margin-left: 0;
@@ -85,6 +99,7 @@
          width: 640px;
          margin-left: 0;
       }
+
       .metro-section {
          position: relative;
          float: left;
@@ -92,6 +107,7 @@
          height: auto;
          margin-right: 75px;
       }
+
       .metro-section.tile-span-5 {
          width: 640px;
          margin-left: 0;
