--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -384,6 +384,55 @@
 
 
 
+.metro-responsive-tiles {
+   .tile {
+      position: relative;
+      display: block;
+      float: left;
+      margin: 5px;
+      padding: 20px;
+      .box-sizing(border-box);
+      width: 100%;
+      height: 150px;
+      color: #FFF;
+      cursor: pointer;
+      overflow: hidden;
+      text-decoration: none;
+      background-color: #2C83EF;
+
+      .image-wrapper {
+         display: block;
+         float: left;
+         height: 80px;
+         width: 80px;
+         .image-wrapper span.icon {
+            font-size: 80px;
+            height: 80px;
+            line-height: 80px;
+            width: 80px;
+         }
+      }
+
+      .column-text {
+         display: block;
+         float: left;
+         padding-left: 10px;
+         width: 180px;
+
+         .text-header3 {
+            font-size: 34px;
+            font-weight: 300;
+            line-height: 36px;
+            max-height: 110px;
+            overflow: hidden;
+            text-align: left;
+         }
+      }
+
+   }
+}
+
+
 
 
 // ListView
