--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -7917,6 +7917,54 @@ Progress control. */
   padding: 0 65px;
 }
 
+.metro-responsive-tiles .tile {
+  position: relative;
+  display: block;
+  float: left;
+  width: 100%;
+  height: 150px;
+  padding: 20px;
+  margin: 5px;
+  overflow: hidden;
+  color: #FFF;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #2C83EF;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.metro-responsive-tiles .tile .image-wrapper {
+  display: block;
+  float: left;
+  width: 80px;
+  height: 80px;
+}
+
+.metro-responsive-tiles .tile .image-wrapper .image-wrapper span.icon {
+  width: 80px;
+  height: 80px;
+  font-size: 80px;
+  line-height: 80px;
+}
+
+.metro-responsive-tiles .tile .column-text {
+  display: block;
+  float: left;
+  width: 180px;
+  padding-left: 10px;
+}
+
+.metro-responsive-tiles .tile .column-text .text-header3 {
+  max-height: 110px;
+  overflow: hidden;
+  font-size: 34px;
+  font-weight: 300;
+  line-height: 36px;
+  text-align: left;
+}
+
 .mediumListIconTextItem.selected .mediumListIconTextItem-Detail,
 .mediumListIconTextItem.selected .mediumListIconTextItem-Detail h4,
 .mediumListIconTextItem.selected .mediumListIconTextItem-Detail h6 {
